--- a/sass-coder-coder/index.html
+++ b/sass-coder-coder/index.html
@@ -4,12 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="app/scss/style.css">
   <title>Document</title>
 </head>
 <body>
-  <div class="container">
-    <input type="range" min="1" max="5">
-  </div>
+  <h1 class="test2">test</h1>
 </body>
 </html>
